# scenescape

./: Makefile  README.md  third-party-programs.txt
.github/actions/cleanup/: action.yaml
.github/resources/: requirements.txt
.github/workflows/: tests-all.yml  tests-bat.yml
autocalibration/: requirements-runtime.txt
autocalibration/docs/user-guide/: api-reference.md
cluster_analytics/: requirements-runtime.txt
cluster_analytics/docs/user-guide/: overview.md
controller/: Dockerfile
controller/config/: tracker-config.json
controller/src/controller/: cache_manager.py  scene.py  scene_controller.py  time_chunking.py
controller/src/robot_vision/: CMakeLists.txt
controller/src/robot_vision/include/rv/tracking/: CameraUtils.hpp
controller/src/robot_vision/python/src/robot_vision/extensions/: tracking.cpp
controller/src/robot_vision/src/rv/tracking/: CameraUtils.cpp
dlstreamer-pipeline-server/: README.md  queuing-config-gpu.json  retail-config-gpu.json
docs/adr/: 0007-tracker-service.md
docs/development/: vscode-setup.md
docs/user-guide/: getting-started-guide.md
docs/user-guide/building-a-scene/: how-to-configure-a-hierarchy-of-scenes.md  how-to-create-new-scene.md  how-to-generate-scene-map.md
docs/user-guide/other-topics/: how-to-configure-dlstreamer-video-pipeline.md  how-to-define-object-properties.md  how-to-enable-reidentification.md  how-to-integrate-geti-trained-model.md  how-to-manage-files-in-volumes.md  model-configuration-file-format.md
docs/user-guide/using-intel-scenescape/: how-to-integrate-cameras-and-sensors.md  working-with-spatial-analytics-data.md
kubernetes/scenescape-chart/: values.yaml
kubernetes/scenescape-chart/templates/: camcalibration-dep.yaml  web-dep.yaml
kubernetes/scenescape-chart/templates/web-app/: deployment.yaml
manager/: requirements-runtime.txt
manager/config/: default-ssl.conf  scenescape-init  webserver-init
manager/src/django/: models.py
mapping/docs/user-guide/: How-to-build-source.md  overview.md
mapping/tests/: requirements-test.txt
sample_data/: docker-compose-dl-streamer-example.yml  docker-compose-dls-perf.yml
tests/: Makefile  Makefile.functional  Makefile.sscape
tests/compose/: camcalibration.yml
tests/perf_tests/: tc_inference_performance.sh
tests/perf_tests/compose/: docker-compose-inference_performance.yml
tests/sscape_tests/robot_vision/: tracking_test.py
tests/sscape_tests/scene_pytest/: test_scene.py
